Check whether a layer is fake

The homogenous check should disregard fake nodes.

BUG:492236
(cherry picked from commit 02671ca7e0b77c2dc5d90f4b237f28b470557a72)